fix: tweak placement of popups
Moving cursor onto popups could cause the popups to hide themselves
due to a 1px misalignment.

--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -301,7 +301,7 @@ app-issue-list {
 }
 
 .tr-site .issue-box app-issue-list {
-  bottom: 22px;
+  bottom: 21px;
   left: 2px;
 }
 
